arlex-derive/tests/cases/accounts_close_not_found.stderr
error: close target not found
 --> tests/cases/accounts_close_not_found.rs:5:23
  |
5 |     #[account(close = ghost)]
  |                       ^^^^^
